# pr7sem2

./: CMakeLists.txt  README.md  randomizer.sh
